# game-cc2

./: CMakeLists.txt  README.md
images/: nota2.txt
juego/: BushPlatform.hpp  CMakeLists.txt  DefaultPlatform.hpp  Fireball.cpp  Fireball.hpp  Level.hpp  LevelPlatform.hpp  MountainPlatform.hpp  Platform.cpp  Platform.hpp  PlatformDecorator.hpp  Player.cpp  Player.hpp  main.cpp
src/: AttackStrategy.h  Button.h  DefaultPlatform.hpp  Enemy.cpp  Enemy.h  Fireball.cpp  Fireball.h  FireballAttack.hpp  GemRush.cbp  GemRush.depend  GemRush.layout  Item.cpp  Item.h  ItemFactory.cpp  ItemFactory.h  Level.hpp  LevelPlatform.hpp  MountainPlatform.hpp  Nitem.cpp  Nitem.h  Nota.txt  Observer.h  Platform.cpp  Platform.h  Platform.hpp  PlatformDecorator.hpp  Player.cpp  Player.h  Strategy.hpp  Subject.cpp  Subject.h  Unite.cbp  coin.cpp  coin.h  main.cpp  notas.txt  subjectClass.txt
